# medical-tender-scraper

./: .gitignore  Makefile  README.md  SKILL.md  check_result.py  check_result2.py  pyproject.toml  requirements.txt  run.py  test_page.html
docs/: medical-tender-scraper-readme.md  medical-tender-scraper-usage.md  project-summary-2026-04-07.md  project-summary-2026-04-09.md  tender-websites-final-complete.md  usage.md
scripts/: run.py  run_combined.py  run_ggzy.py
src/: __init__.py  config.py  http_client.py  main.py  parser.py
src/exporters/: __init__.py  excel_exporter.py
src/fetchers/: __init__.py  ccgp_fetcher.py  ggzy_fetcher.py  ggzy_fetcher_playwright.py
tests/: test_ccgp_fetcher.py  test_config.py  test_excel_exporter.py  test_http_client.py  test_integration.py  test_live_fetch.py  test_main.py  test_parser.py
